<resources>
    <string name="app_name">Material Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_todo">To-do List</string>
    <string name="nav_item_addtask">Add Task</string>
    <string name="nav_item_settings">Settings</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_settings</item>
    </string-array>

    <string name="title_home" translatable="false">Material Tasks</string>
    <string name="title_add">Add/Edit Task</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help/Support</string>



    <string name="task_title">Enter task</string>
    <string name="task_title_label">Task Title</string>
    <string name="task_details_label">Details</string>
    <string name="task_checked_label">Completed?</string>

    <string name="tasks_title" translatable="false">Material Tasks</string>
    <string name="add_a_task">Add a task</string>
    <string name="date_picker_title">Set a completion date:</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_photo">Delete photo</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="enter_task_details">Enter task details</string>
    <string name="take" translatable="false">Capture Image</string>

    <!-- preferences -->

    <string name="pref_dark_theme" translatable="false">pref_dark_theme</string> <!-- deprecated -->
    <string name="pref_theme" translatable="false">pref_theme</string>
    <string name="pref_help" translatable="false">pref_help</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_category_application">Application</string>
    <string name="pref_category_other">Other</string>

    <string name="openDrawer" translatable="false">Open Drawer</string>
    <string name="closeDrawer" translatable="false">Close Drawer</string>

    <string name="notification_alert">Reminder: Some task requires your attention!</string>


</resources>
