<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_application" >
        <ListPreference
            android:key="@string/pref_theme"
            android:title="@string/pref_theme_title"
            android:entries="@array/pref_theme_options"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="@string/pref_theme_value_light"
        />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_other" >

        <Preference
            android:key="@string/title_instructions"
            android:title="@string/title_instructions">
        </Preference>

        <Preference
            android:key="@string/pref_help"
            android:title="@string/title_help">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://bowenchin.com/MaterialTasks/"
                />
        </Preference>
    </PreferenceCategory>


</PreferenceScreen>