<FrameLayout
    android:id="@+id/fragment_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="370dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="5dp"
        app:borderWidth="5dp"
        android:layout_marginBottom="30dp"
        android:background="?attr/themedCardBackgroundColor"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/themedCardBackgroundColor"
            >

            <ImageView
                android:id="@+id/header"
                android:layout_width="380dp"
                android:layout_height="150dp"
                android:background="?attr/themedColorPrimaryDark"
                android:src="@drawable/ic_create_white_36dp"
                android:padding="35dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:elevation="5dp"/>

            <EditText
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:hint="@string/task_title"
                android:background="?attr/themedTextColorSecondaryLight"
                android:layout_below="@+id/header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="?attr/themedTextColorPrimary"
                android:elevation="3dp"
                />

            <Button
                android:id="@+id/task_date"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_below="@+id/task_title"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:background="?attr/themedColorPrimaryLight"
                android:bottomRightRadius="2dp"
                android:bottomLeftRadius="2dp"
                android:topLeftRadius="2dp"
                android:topRightRadius="2dp"
                android:textColor="?attr/themedTextColorSecondary"
                />

            <CheckBox
                android:id="@+id/task_checked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_checked_label"
                android:textSize="16sp"
                android:layout_alignBottom="@+id/task_date"
                android:layout_toRightOf="@+id/task_date"
                android:layout_toEndOf="@+id/task_date"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="?attr/themedTextColorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date_picker_title"
                android:id="@+id/textView2"
                android:layout_below="@+id/task_title"
                android:layout_alignLeft="@+id/task_date"
                android:layout_alignStart="@+id/task_date"
                android:layout_marginTop="10dp"
                android:textColor="?attr/themedTextColorSecondary"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="32dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    tools:context="com.bowenchin.android.materialtasks.activity.TaskFragment"
    >


    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_create_white_36dp"
        android:textColor="@color/primary_material_light"
        android:padding="7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />

    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/task_title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimaryLight"
        android:layout_marginTop="5dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_details_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
    <Button
        android:id="@+id/task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"

        />
    <CheckBox
        android:id="@+id/task_checked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/task_checked_label"
        />

</LinearLayout>-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/done_edit"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_done_white_24dp"
        app:borderWidth="0dp"
        />

</FrameLayout>